added radar commands & query modules

--- a/backend-services/immatriculation-service-commands-side/pom.xml
+++ b/backend-services/immatriculation-service-commands-side/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>me.ubmagh</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
