--- a/backend-services/infraction-service-commands-side/src/main/resources/application.properties
+++ b/backend-services/infraction-service-commands-side/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=infraction-commands-service
+server.port=8005
+axon.axonserver.servers=localhost
+axon.axonserver.enabled=true
 
