--- a/backend-services/immatriculation-service-commands-side/src/main/resources/application.properties
+++ b/backend-services/immatriculation-service-commands-side/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=immatriculation-commands-service
+server.port=8003
+axon.axonserver.servers=localhost
+axon.axonserver.enabled=true
+
 
