--- a/backend-services/immatriculation-service-query-side/src/main/resources/application.properties
+++ b/backend-services/immatriculation-service-query-side/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.application.name=immatriculation-query-service
+server.port=8004
+axon.axonserver.servers=localhost
+axon.axonserver.enabled=true
 
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/radarDB?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
